--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "chart.js": "^4.3.0",
     "react": "^18.2.0",
-    "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "recharts": "^2.6.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
